--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
-brain-even = "brain_games.scripts.brain_even:main"
-brain-calc = "brain_games.scripts.brain_calc:main"
-brain-gcd = "brain_games.scripts.brain_gcd:main"
-brain-progression = "brain_games.scripts.brain_progression:main"
-brain-prime = "brain_games.scripts.brain_prime:main"
+brain-even = "brain_games.games.even_game:main"
+brain-calc = "brain_games.games.calc_game:main"
+brain-gcd = "brain_games.games.gcd_game:main"
+brain-progression = "brain_games.games.progression_game:main"
+brain-prime = "brain_games.games.prime_game:main"
